Update for Patch v3.10.2 - checksum: 1cff

--- a/mod/thmod/localisation/english/ancient_relics_l_english.yml
+++ b/mod/thmod/localisation/english/ancient_relics_l_english.yml
@@ -137,7 +137,7 @@
  ARCHAEOLOGICAL_SITE_ON_ROLL_FAILED_RANGE:1 "($CHANCE|%0Y$) ผลลัพธ์อยู่ระหว่าง $MIN|0Y$ ถึง $MAX|0Y$ เพิ่มเบาะแส $CLUES|0Y$"
  ARCHAEOLOGICAL_SITE_ON_ROLL_FAILED_GREATER_THAN_EQ:0 "($CHANCE|%0Y$) ผลลัพธ์คือ $MIN|0Y$ หรือสูงกว่านั้น จบขั้นตอน"
  ARCHAEOLOGICAL_SITE_ON_ROLL_FAILED_LESS_THAN_EQ:0 "($CHANCE|%0Y$) ผลลัพธ์คือ $MAX|0Y$ หรือน้อยกว่านั้น เพิ่มเบาะแส $CLUES|0Y$"
- archaeology_roll_header:2 "§H$ARCHAEOLOGICAL_SITE_BREAKTHROUGH$§!\nThis reflects the chance of your Scientist making a breakthrough during the excavation of the current site.\n\nEvery time a phase ends, a die (§Y1§! to §Y10§!) is rolled. The result of the roll is added to §YSkill Bonus§! and §YClues§!, then subtracted by §YDifficulty§!.\n\nThe current score before dice roll is $SCORE|0Y$.\n\n§ERoll Outcomes:§!"
+ archaeology_roll_header:2 "§H$ARCHAEOLOGICAL_SITE_BREAKTHROUGH$§!\nสิ่งนี้สะท้อนถึงโอกาสที่นักวิทยาศาสตร์ของคุณจะค้นพบความก้าวหน้าในระหว่างการขุดค้นพื้นที่ปัจจุบัน\n\nทุกครั้งที่เฟสสิ้นสุดลง การสุ่ม (§Y1§! ถึง §Y10§!) ผลลัพธ์ของการสุ่ม จะถูกเพิ่มไปที่ §Yโบนัสสกิล§! และ §Yเบาะแส§! แล้วลบด้วย §Yความยาก§!\n\nคะแนนปัจจุบันก่อนสุ่มลูกเต๋าคือ $SCORE|0Y$\n\n§Eผลลัพธ์ของการดำเนินการ:§!"
  alert_activate_relic_title:0 "สามารถการเปิดใช้งานวัตถุโบราณได้"
  alert_activate_relic_instant:0 "ตอนนี้คุณสามารถเปิดใช้งานหนึ่งในวัตถุโบราณของคุณได้แล้ว"
  CHAPTER_TITLE:0 "ขั้นที่ $CHAPTER$"
@@ -185,7 +185,7 @@
  MEGASTRUCTURE_STAGE_UNLOCK_TOOLTIP:0 "$NAME|E$:\nค่าใช้จ่าย: $COST$ $TIME$\n"
  MEGASTRUCTURE_STAGE_UNLOCK_TOOLTIP_PRODUCES:0 "ผลิต: $PRODUCES$\n"
  MEGASTRUCTURE_STAGE_UNLOCK_TOOLTIP_UPKEEP:0 "ค่าบำรุงรักษา: $UPKEEP$\n"
- EXCAVATION_PROGRESS_TOOLTIP:1 "§HExcavation Phase§!\nArchaeological sites are excavated in phases, at the end of each phase a progress roll is made.\n\nNext phase ends in £time£ $DAYS|Y$"
+ EXCAVATION_PROGRESS_TOOLTIP:1 "§Hช่วงขุดวัตถุโบราณ§!\nแหล่งโบราณคดีอยู่ในช่วงขุดค้น เมื่อสิ้นสุดแต่ละช่วงจะมีการสุ่มความคืบหน้า\n\nช่วงต่อไปจะสิ้นสุดใน £time£ $DAYS|Y$ วัน"
  LEADER_MODIFIERS:0 "§Hการปรับเปลี่ยนผู้นำ§!"
  ARCHAEOLOGICAL_SITE:0 "โบราณสถาน"
  ARCHAEOLOGICAL_SITE_IN_SYSTEM:0 "ระบบนี้มีแหล่งโบราณคดีอย่างน้อยหนึ่งแห่ง"
@@ -202,7 +202,7 @@
  ARC_DIFFICULTY_TYPE_TT:0 "§H$ARC_DIFFICULTY_TYPE$§!\n$VALUE$\n\n$ARC_DIFFICULTY_TYPE_DESC$"
  ARC_GO_TO:0 "§HGo To§!\n§GClick to quickly navigate the camera to where this site is located§!"
  ARC_LEADER_BONUS:0 "โบนัสสกิล"
- ARC_LEADER_BONUS_DESC:0 "The skill bonus will increase the likelihood of getting successful results at the end of an excavation phase.\n\nThis bonus increases §YBreakthrough Chance§!."
+ ARC_LEADER_BONUS_DESC:0 "The skill bonus will increase the likelihood of getting successful results at the end of an excavation phase.\n\nโบนัสนี้จะเพิ่ม §Yโอกาสในการก้าวหน้า§!"
  ARC_LEADER_BONUS_TT:0 "§H$ARC_LEADER_BONUS$§!\n$ARC_LEADER_BONUS_DESC$"
  ARC_CLUES:0 "ร่องรอยเบาะแส"
  ARC_CLUES_DESC:0 "Clues represent how much information you have uncovered in relation to a chapter in an archaeological excavation.\n\nClues increase §YBreakthrough Chance§!."
@@ -839,8 +839,8 @@
  sm_archaeo_rampart:0 "$tech_archaeo_rampart$"
  sm_archaeo_rampart_desc:0 "$tech_archaeo_rampart_desc$\n"
  sm_archaeo_rampart_desc_modifier:0 "[Root.GetArchaeoRampartEffect]"
- archaeo_rampart_desc:0 "การปรับเปลี่ยนของฐานอวกาศ:\nHP ยาน: §G+15%§!\nHP เกราะ: §G+15%§!\nจำนวนสูงสุดของแพลตฟอร์มป้องกัน: §G+2§!"
- improved_archaeo_rampart_desc:0 "การปรับเปลี่ยนของฐานอวกาศ:\nHP ยาน: §G+15%§!\nHP เกราะ: §G+20%§!\nเสริมความแข็งแกร่งเกราะ: §G+10%§!\nจำนวนสูงสุดของแพลตฟอร์มป้องกัน: §G+2§!"
+ archaeo_rampart_desc:0 "การปรับเปลี่ยนของฐานอวกาศ:\n$t$HP: §G+15%§!\n$t$HP เกราะ: §G+15%§!\n$t$ความจุแพลตฟอร์มป้องกัน: §G+2§!\nการปรับเปลี่ยนของแพลตฟอร์มป้องกัน:\n$t$พลังโจมตีของอาวุธ: §G+5%§!\n$t$HP: §G+5%§!"
+ improved_archaeo_rampart_desc:0 "การปรับเปลี่ยนของฐานอวกาศ:\n$t$HP: §G+15%§!\n$t$HP เกราะ: §G+20%§!\n$t$เสริมความแข็งแกร่งเกราะ: §G+10%§!\n$t$ความจุแพลตฟอร์มป้องกัน: §G+2§!\nการปรับเปลี่ยนของแพลตฟอร์มป้องกัน:\n$t$พลังโจมตีของอาวุธ: §G+5%§!\n$t$HP: §G+5%§!"
  sm_archaeo_overcharger:0 "$tech_archaeo_overcharger$"
  sm_archaeo_overcharger_desc:0 "$tech_archaeo_overcharger_desc$\n"
  sm_archaeo_overcharger_desc_modifier:0 "[Root.GetArchaeoOverchargerEffect]"
