--- a/mod/thmod/localisation/english/federations_l_english.yml
+++ b/mod/thmod/localisation/english/federations_l_english.yml
@@ -518,7 +518,7 @@
  law_category_separate_treaties_desc:0 "This determines if we allow Members to have Separate Treaties within the Federation."
  treaties_separate_yes:0 "อนุญาต"
  treaties_separate_yes_desc:0 "Federation members are allowed to sign diplomatic agreements with empires outside the Federation."
- treaties_separate_no:0 "ห้าม"
+ treaties_separate_no:0 "ไม่อนุญาต"
  treaties_separate_no_desc:0 "Federation members are prohibited from having Research Agreements, Migration Treaties or Commercial Pacts with empires outside the Federation."
  law_category_challenge:0 "ความท้าทายในการสืบทอดตำแหน่งประธานคนต่อไป"
  law_category_challenge_desc:0 "กำหนดประเภทความท้าทายที่จะใช้ในการกำหนดประธานสหพันธ์คนต่อไป"
@@ -935,7 +935,7 @@
  resolution_category_galactic_market:0 "ตลาดกาแล็กติก"
  resolution_galactic_market_form:0 "ก่อตั้งตลาดกาแล็กติก"
  resolution_galactic_market_form_desc:0 "De facto galactic trade, unbound by international diplomacy, has existed since the first two interstellar species met.\n\nAs galactic leaders we should agree that it is time to §Ylegitimize this commercial forum§! so that all may benefit."
- resolution_galactic_market_form_effect_success:0 "เริ่มเหตุการณ์ $action.96.name$"
+ resolution_galactic_market_form_effect_success:0 "เหตุการณ์ต่อเนื่อง $action.96.name$"
  resolution_galactic_market_form_effect_failure:0 "The $action.106.name$ will not be formed yet."
  galactic_market_founded:0 "$resolution_galactic_market_form$"
  resolution_category_ecology:0 "การปกป้องระบบนิเวศ"
@@ -1311,7 +1311,7 @@
  resolution_galactic_focus_war_in_heaven_support_side_2_success:2 "ความผิดพลาดในการเข้าร่วม §Y[SecondSleeper.GetName]§! ใน §Yสงครามมหาเทพ§! จะถือเป็น §Rการละเมิดกฎหมายกาแล็กติก§!"
  resolution_galactic_focus_war_in_heaven_denounce_both:0 "โฟกัส: ประณามจักรวรรดิฟอลเล็นที่ตื่นขึ้นทั้งคู่"
  resolution_galactic_focus_war_in_heaven_denounce_both_desc:1 "Both the [FirstSleeper.GetName] and the [SecondSleeper.GetName] are acting like children. Prepare a harshly worded letter for each."
- resolution_galactic_focus_war_in_heaven_denounce_both_success:0 "การเข้าร่วมกับจักรวรดิฟอล์เล็นฝ่ายใดฝ่ายหนึ่งใน §Yสงครามมหาเทพ§! จะถือเป็น §Rการละเมิดกฎหมายกาแล็กติก§!\n\nจักรวรรดิที่ไม่ใช่บริวารของจักรวรดิฟอล์เล็นจะได้รับโบนัสตามรายการ"
+ resolution_galactic_focus_war_in_heaven_denounce_both_success:0 "การเข้าร่วมกับจักรวรรดิฟอล์เล็นฝ่ายใดฝ่ายหนึ่งใน §Yสงครามมหาเทพ§! จะถือเป็น §Rการละเมิดกฎหมายกาแล็กติก§!\n\nจักรวรรดิที่ไม่ใช่บริวารของจักรวรรดิฟอล์เล็นจะได้รับโบนัสตามรายการ"
  galactic_focus_crisis_prethoryn:3 "ปราบ Prethoryn Scourge"
  galactic_focus_crisis_prethoryn_desc:0 "The Prethoryn Scourge are a true crisis and a threat to the entire galaxy. We must unite and defeat the menace."
  galactic_focus_crisis_unbidden:3 "ปราบ Unbidden"
@@ -1839,7 +1839,7 @@
  origin_shoulders_of_giants:0 "บนไหล่ของยักษ์"
  origin_shoulders_of_giants_desc:1 "This civilization has hidden boons in their solar system, placed there in a distant past by a mysterious benefactor."
  origin_tooltips_shoulders_of_giants_effects:2 "- $HOME_SYSTEM$ ['concept_archaeology_site'] ['concept_ex_gravitas'] เกี่ยวข้องกับผู้อุปถัมภ์ลึกลับในระบบดาวบ้านของคุณ"
- origin_tooltips_shoulders_of_giants_negative_effects: "- เหตุการณ์ Precursor (จักรวรรดิแรกเริ่ม / ประถมจักรวรรดิ) ถูกบล็อกจนกว่าจะไขปริศนานี้ได้"
+ origin_tooltips_shoulders_of_giants_negative_effects: "- เหตุการณ์ต่อเนื่อง Precursor (จักรวรรดิแรกเริ่ม / ประถมจักรวรรดิ) ถูกบล็อกจนกว่าจะไขปริศนานี้ได้"
  START_SCREEN_SHOULDERS_OF_GIANTS:1 "Ours is a history of oddities and inconsistencies. We've found ancient city ruins older than some archaeological excavations of primitive villages. We have unearthed saws, axes and even rifles which far pre-date stone-tipped spears and bows.\n\nA peculiar history did not, however, prevent us from stepping readily into a futuristic era of spaceflight. We have now managed to escape the gravity of our home planet, aiming for other planets and bodies in our solar system - and beyond.\n\nWe had scarcely left the atmosphere before the oddities emerged anew; strange signals of alien origin coming from within our own solar system."
  site_ex_gravitas:0 "Ex Gravitas"
  site_ex_gravitas_intro:0 "A string of strange anomaly readings is emanating from the surface of [From.Planet.GetName]. We need to launch a surface excursion to find out more."
