--- a/mod/thmod/localisation/english/leaders_l_english.yml
+++ b/mod/thmod/localisation/english/leaders_l_english.yml
@@ -52,11 +52,11 @@
  subclass_commander_councilor_hive_desc:0 "$subclass_commander_councilor_desc$"
  subclass_commander_councilor_machine:0 "$subclass_commander_councilor$"
  subclass_commander_councilor_machine_desc:0 "$subclass_commander_councilor_desc$"
- subclass_official_delegate: "ตัวแทน"
+ subclass_official_delegate: "ผู้แทน"
  subclass_official_delegate_desc: "As the public face of our empire, Delegates represent our interests in Federations and in the Galactic Community."
- subclass_official_delegate_hive: "ตัวแทน"
+ subclass_official_delegate_hive: "ผู้แทน"
  subclass_official_delegate_hive_desc: "$subclass_official_delegate_desc$"
- subclass_official_delegate_machine: "ตัวแทน"
+ subclass_official_delegate_machine: "ผู้แทน"
  subclass_official_delegate_machine_desc: "$subclass_official_delegate_desc$"
  subclass_official_diplomacy_councilor: "เอกอัครราชทูต"
  subclass_official_diplomacy_councilor_desc: "Ambassadors maintain our relationships with other empires, both overtly and in more subtle ways. The art of diplomacy and the subtle craft of espionage both fall under their domain."
@@ -182,7 +182,7 @@
  leader_trait_resolution_category_sanctions_focus_1_tt: "$leader_trait_resolution_category_sanctions_focus_tt$ §G+5%§!"
  leader_trait_resolution_category_sanctions_focus_2_tt: "$leader_trait_resolution_category_sanctions_focus_tt$ §G+15%§!"
  leader_trait_resolution_category_sanctions_focus_3_tt: "$leader_trait_resolution_category_sanctions_focus_tt$ §G+25%§!"
- leader_trait_supporting_voter: "Mutual Support"
+ leader_trait_supporting_voter: "สนับสนุนซึ่งกันและกัน"
  leader_trait_supporting_voter_desc: "This leader is always eager to congratulate others for their success."
  leader_trait_supporting_voter_tt: "£diplo_weight£ §Y[GetGalCommunityOrGalImperium]§! §EEffects§!:$TABBED_NEW_LINE$Support for a passed Resolution grants 1 §YFavor§! and 5 §YTrust§! with the proposing empire"
  MESSAGE_SUPPORTING_VOTER: "Favor Gained"
@@ -227,7 +227,7 @@
  leader_trait_academic_minor_artifacts_expert_tt: "$leader_trait_academic_minor_artifacts_expert_tt_intro$ §G+$@minor_artifacts_expert_amt_1|0$%§!"
  leader_trait_academic_minor_artifacts_expert_2_tt: "$leader_trait_academic_minor_artifacts_expert_tt_intro$ §G+$@minor_artifacts_expert_amt_2|0$%§!"
  leader_trait_academic_minor_artifacts_expert_3_tt: "$leader_trait_academic_minor_artifacts_expert_tt_intro$ §G+$@minor_artifacts_expert_amt_3|0$%§!"
- leader_trait_academic_dig_site_expert: "Excavator"
+ leader_trait_academic_dig_site_expert: "ผู้ขุดค้นวัตถุโบราณ"
  leader_trait_academic_dig_site_expert_desc: "This leader is no stranger to physical labor and finds field work particularly enjoyable."
  leader_trait_academic_astral_rift_expert: "Riftwalker"
  leader_trait_academic_astral_rift_expert_desc: "The Rift beckons. The scholar answers the call."
