--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -783,9 +783,10 @@
  mod_shipclass_military_station_hull_mult:1 "HP แพลตฟอร์มป้องกัน"
  mod_shipclass_military_station_build_cost_mult:1 "ค่าใช้จ่ายในการสร้างแพลตฟอร์มป้องกัน"
  mod_shipclass_starbase_hull_mult:0 "HP ฐานอวกาศ"
- mod_shipclass_starbase_armor_mult:0 "Starbase Armor"
+ mod_shipclass_starbase_armor_mult:0 "เกราะของฐานอวกาศ"
  mod_shipclass_starbase_damage_mult:0 "พลังโจมตีของฐานอวกาศ"
  mod_shipclass_starbase_build_cost_mult:0 "ค่าใช้จ่ายในการสร้างฐานอวกาศ"
+ mod_shipclass_starbase_armor_hardening_add: "เสริมความแข็งแกร่งให้เกราะของฐานอวกาศ"
  mod_shipclass_colonizer_build_cost_mult:0 "ค่าใช่จ่ายในการสร้างยานอาณานิคม"
  mod_weapon_type_explosive_weapon_damage_mult:0 "พลังโจมตีอาวุธประเภทระเบิด"
  mod_weapon_type_explosive_weapon_fire_rate_mult:1 "อัตราการยิงอาวุธประเภทระเบิด"
@@ -1163,7 +1164,7 @@
  opinion_friction:0 "ความขัดแย้งขอบชายแดน"
  opinion_rivalry:0 "คู่แข่งของเรา"
  opinion_declared_rival:0 "คู่แข่งเรา"
- opinion_mutual_threat:0 "Mutual Threats"
+ opinion_mutual_threat:0 "มีภัยคุกคามร่วมกัน"
  opinion_mutual_rival:0 "มีคู่แข่งร่วมกัน"
  opinion_ally_of_ally:0 "พันธมิตรของพันธมิตร"
  opinion_allied_to_rival:0 "จากพันธมิตรเป็นคู่แข่ง"
