--- a/mod/thmod/localisation/english/overlord_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_l_english.yml
@@ -404,8 +404,8 @@
  dialog_neutral_tt:0 "We will take a §Yneutral§! stance."
  dialog_wary_tt:0 "We will take a §Ycautious§! stance."
  dialog_hostile_tt:0 "We will take a §Rhostile§! stance."
- is_a_signatory_vassal:0 "Is a Signatory."
- is_not_a_signatory_vassal:0 "Is NOT a Signatory."
+ is_a_signatory_vassal:0 "เป็นบริวารของจักรวรรดิฟอล์เล็น"
+ is_not_a_signatory_vassal:0 "ไม่เป็นบริวารของจักรวรรดิฟอล์เล็น"
  is_a_signatory_vassal_success:0 "$TRIGGER_PASS$ $is_a_signatory_vassal$"
  is_a_signatory_vassal_fail:0 "$TRIGGER_FAIL$ $is_a_signatory_vassal$"
  is_not_a_signatory_vassal_success:0 "$TRIGGER_PASS$ $is_not_a_signatory_vassal$"
