--- a/mod/thmod/localisation/english/paragon_2_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_2_l_english.yml
@@ -829,23 +829,23 @@
  leader_trait_generator_focus_2_desc:0 "$leader_trait_generator_focus_desc$"
  leader_trait_generator_focus_3:0 "$leader_trait_generator_focus$ III"
  leader_trait_generator_focus_3_desc:0 "$leader_trait_generator_focus_desc$"
- leader_trait_mining_focus:1 "โฟกัสการทำเหมือง"
+ leader_trait_mining_focus:2 "โฟกัสการทำเหมือง"
  leader_trait_mining_focus_desc:0 "This leader has a keen understanding of mining processes, which allows them to oversee these facilities efficiently."
  leader_trait_mining_focus_2:0 "$leader_trait_mining_focus$ II"
  leader_trait_mining_focus_2_desc:0 "$leader_trait_mining_focus_desc$"
  leader_trait_mining_focus_3:0 "$leader_trait_mining_focus$ III"
  leader_trait_mining_focus_3_desc:0 "$leader_trait_mining_focus_desc$"
- leader_trait_farming_focus:1 "โฟกัสการเกษตร"
+ leader_trait_farming_focus:2 "โฟกัสการเกษตร"
  leader_trait_farming_focus_desc:0 "This leader has a keen understanding of farming processes, which allows them to oversee these facilities efficiently."
  leader_trait_farming_focus_2:0 "$leader_trait_farming_focus$ II"
  leader_trait_farming_focus_2_desc:0 "$leader_trait_farming_focus_desc$"
  leader_trait_farming_focus_3:0 "$leader_trait_farming_focus$ III"
  leader_trait_farming_focus_3_desc:0 "$leader_trait_farming_focus_desc$"
- leader_trait_trade_focus:1 "นักเทรด"
+ leader_trait_trade_focus:2 "โฟกัสการค้า"
  leader_trait_trade_focus_desc:1 "This leader has a keen understanding of bargaining techniques, which allows for the acquisition of profitable contracts."
  leader_trait_trade_focus_2:0 "$leader_trait_trade_focus$ II"
  leader_trait_trade_focus_2_desc:0 "$leader_trait_trade_focus_desc$"
- leader_trait_industrial_focus:1 "โฟกัสอุตสาหกรรม"
+ leader_trait_industrial_focus:2 "โฟกัสโรงงาน"
  leader_trait_industrial_focus_desc:0 "This leader has a keen understanding of industrial processes, which allows them to oversee these facilities efficiently."
  leader_trait_industrial_focus_2:0 "$leader_trait_industrial_focus$ II"
  leader_trait_industrial_focus_2_desc:0 "$leader_trait_industrial_focus_desc$"
@@ -1157,7 +1157,7 @@
  leader_trait_crusader_2_effect:1 "$FLEET_EFFECTS_TXT$:\n$t$$EVERY_ENEMY_SHIP_DESTROYED_TXT$:\n$tt$$r_unity$: §G+$@trait_crusader_2_fleet_amt|0$§!\n\n$ARMY_EFFECTS_TXT$:\n$t$$EVERY_ARMY_KILLED_TXT$:\n$tt$$r_unity$: §G+40§!"
  leader_trait_crusader_2_desc:0 "$leader_trait_crusader_desc$"
  leader_trait_crusader_3_effect: "$FLEET_EFFECTS_TXT$:\n$t$$MOD_DAMAGE_VS_RIVAL_MULT$: §G+15%§!\n$t$$EVERY_ENEMY_SHIP_DESTROYED_TXT$:\n$tt$$r_unity$: §G+$@trait_crusader_2_fleet_amt|0$§!\n\n$ARMY_EFFECTS_TXT$:\n$t$$MOD_ARMY_DAMAGE_MULT$: §G+10%§!\n$t$$MOD_ARMY_MORALE$: §G+25%§!\n$t$$EVERY_ARMY_KILLED_TXT$:\n$tt$$r_unity$: §G+40§!"
- leader_trait_uninspiring:1 "Incoherence"
+ leader_trait_uninspiring:1 "ไม่สอดคล้องกัน"
  leader_trait_uninspiring_desc:1 "This leader lacks charisma and makes no effort to reward or encourage, leaving their soldiers demotivated."
  leader_trait_slothful:1 "Sloth"
  leader_trait_slothful_desc:1 "This leader's reluctance to organize training drills affects [Root.GetHisHer] army's combat prowess."
