--- a/mod/thmod/localisation/english/paragon_4_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_4_l_english.yml
@@ -688,9 +688,9 @@
  leader_trait_generator_focus_2_hive_desc:0 "$leader_trait_generator_focus_hive_desc$"
  leader_trait_generator_focus_2_machine:0 "$leader_trait_generator_focus_machine$ II"
  leader_trait_generator_focus_2_machine_desc:0 "$leader_trait_generator_focus_machine_desc$"
- leader_trait_farming_focus_hive:0 "Farming Focus"
+ leader_trait_farming_focus_hive:0 "โฟกัสการทำฟาร์ม"
  leader_trait_farming_focus_hive_desc:1 "This drone is proficient at growing and preserving food."
- leader_trait_farming_focus_machine:0 "Farming Focus"
+ leader_trait_farming_focus_machine:0 "โฟกัสการทำฟาร์ม"
  leader_trait_farming_focus_machine_desc:1 "This unit has been optimized to be proficient at growing and preserving food."
  leader_trait_settler_hive:0 "Settler"
  leader_trait_settler_hive_desc:1 "This drone is proficient at improving housing and nest maintenance costs."
