--- a/mod/thmod/localisation/english/paragon_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_l_english.yml
@@ -1012,7 +1012,7 @@
  council_agenda_agenda_reorganize_council_desc:0 "เนื่องจากมีการเปลี่ยนแปลงความสนใจของรัฐบาล เราควรจัดสภาใหม่เพื่อโฟกัสเรื่องอื่นๆ"
  council_agenda_agenda_we_come_in_peace_name:0 "เรามาอย่างสันติ"
  council_agenda_agenda_we_come_in_peace_desc:0 "ตรวจสอบให้แน่ใจว่าการไม่รุกรานมีอยู่ในสังคมและความสัมพันธ์ทางการทูตของเรา"
- council_agenda_agenda_we_come_in_peace_effect_per_country:1 "Every Non-Genocidal: §G+$@agenda_we_come_in_peace_trust|0$§! $opinion_trust$\n"
+ council_agenda_agenda_we_come_in_peace_effect_per_country:1 "ทุกจักรวรรดิที่ไม่ฆ่าล้างเผ่าพันธุ์: §G+$@agenda_we_come_in_peace_trust|0$§! $opinion_trust$\n"
  agenda_we_come_in_peace_finish:0 "$council_agenda_agenda_we_come_in_peace_name$ $agenda_ref$"
  agenda_we_come_in_peace_finish_desc:0 "$council_agenda_agenda_we_come_in_peace_desc$"
  council_agenda_agenda_display_of_power_name:0 "การแสดงพลัง"
@@ -1233,16 +1233,16 @@
  mod_restored_growth_node_bonus_skill: "Restored $councilor_gestalt_growth_with_icon$ Additional Skill"
  mod_restored_cognitive_node_bonus_skill: "Restored $councilor_gestalt_cognitive_with_icon$ Additional Skill"
  create_new_node: "\nสิ่งนี้จะสร้าง §Y[GetName]§! ใหม่ สกิล [GetRestoredNodeSkill]"
- hive_restore_node_effect: "This Node will be culled.$create_new_node$"
+ hive_restore_node_effect: "โหนดนี้จะถูกคัดออก$create_new_node$"
  council_agenda_agenda_hive_restore_growth_name: "คัดเลือก $councilor_gestalt_growth$"
- council_agenda_agenda_hive_restore_growth_desc: "Our $councilor_gestalt_growth$ is no longer suited for our purpose, it shall be culled and a replacement Node shall be grown."
+ council_agenda_agenda_hive_restore_growth_desc: "$councilor_gestalt_growth$ของเราไม่เหมาะกับวัตถุประสงค์ของเราอีกต่อไป มันจะถูกคัดออกและโหนดใหม่จะเติบโตขึ้นแทนที่"
  council_agenda_agenda_hive_restore_cognitive_name: "คัดเลือก $councilor_gestalt_cognitive$"
- council_agenda_agenda_hive_restore_cognitive_desc: "Our $councilor_gestalt_cognitive$ is no longer suited for our purpose, it shall be culled and a replacement Node shall be grown."
+ council_agenda_agenda_hive_restore_cognitive_desc: "$councilor_gestalt_cognitive$ของเราไม่เหมาะกับวัตถุประสงค์ของเราอีกต่อไป มันจะถูกคัดออกและโหนดใหม่จะเติบโตขึ้นแทนที่"
  council_agenda_agenda_hive_restore_legion_name: "คัดเลือก $councilor_gestalt_legion$"
- council_agenda_agenda_hive_restore_legion_desc: "Our $councilor_gestalt_legion$ is no longer suited for our purpose, it shall be culled and a replacement Node shall be grown."
+ council_agenda_agenda_hive_restore_legion_desc: "$councilor_gestalt_legion$ของเราไม่เหมาะกับวัตถุประสงค์ของเราอีกต่อไป มันจะถูกคัดออกและโหนดใหม่จะเติบโตขึ้นแทนที่"
  council_agenda_agenda_hive_restore_regulatory_name: "คัดเลือก $councilor_gestalt_regulatory$"
- council_agenda_agenda_hive_restore_regulatory_desc: "Our $councilor_gestalt_regulatory$ is no longer suited for our purpose, it shall be culled and a replacement Node shall be grown."
- machine_restore_node_effect: "This Node will be reformatted.$create_new_node$"
+ council_agenda_agenda_hive_restore_regulatory_desc: "$councilor_gestalt_regulatory$ของเราไม่เหมาะกับวัตถุประสงค์ของเราอีกต่อไป มันจะถูกคัดออกและโหนดใหม่จะเติบโตขึ้นแทนที่"
+ machine_restore_node_effect: "โหนดนี้จะถูกฟอร์แมตใหม่$create_new_node$"
  council_agenda_agenda_machine_restore_growth_name: "ฟอร์แมต $councilor_gestalt_growth$ ใหม่"
  council_agenda_agenda_machine_restore_growth_desc: "$councilor_gestalt_growth$ของเราไม่เหมาะกับวัตถุประสงค์ของเราอีกต่อไป โหนดนั้นจะต้องได้รับการฟอร์แมตใหม่และกู้คืนเป็นข้อมูลสำรองที่ถูกต้องครั้งล่าสุด"
  council_agenda_agenda_machine_restore_cognitive_name: "ฟอร์แมต $councilor_gestalt_cognitive$ ใหม่"
