--- a/mod/thmod/localisation/english/traditions_l_english.yml
+++ b/mod/thmod/localisation/english/traditions_l_english.yml
@@ -711,7 +711,7 @@
  tradition_politics_desc:0 "เวทีการเมืองกาแล็กซีถูกกำหนดขึ้นและเราตั้งใจที่จะมีบทบาทนำ"
  tr_politics_adopt:0 "วัฒนธรรม$tradition_politics$"
  tr_politics_adopt_desc:1 "ทูต §G+1§!\n$official_plural_with_icon$ ที่ประจำอยู่ที่ §Y[GetGalCommunityOrGalImperium]§! จะผลิต £influence£ §Yอิทธิพล§! 0.1 ต่อ §Yสกิลเลเวล§!"
- tr_politics_finish:0 "$tr_politics_adopt$ เสร็จ"
+ tr_politics_finish:0 "สำเร็จ $tr_politics_adopt$"
  tr_politics_finish_desc:1 "£diplo_weight£ น้ำหนักทางการทูต §G+10%§!\nปลดล็อก 4 §Yญัตติพิเศษ§! ใน §Y[GetGalCommunityOrGalImperium]§!\n$TRADITIONS_FINISH_AP$"
  tr_politics_quid_pro_quo:0 "สิ่งนี้เพื่อสิ่งนั้น/ยื่นหมูยื่นแมว"
  tr_politics_quid_pro_quo_desc:0 "เมื่อญัตติที่คุณสนับสนุนผ่าน จะได้รับ 1 §Yบุญคุณ§! จากจักรวรรดิที่เสนอญัตตินั้น"
@@ -735,7 +735,7 @@
  tradition_enmity_desc_machine: "[Root.GetName] พัฒนาเร็วขึ้น เมื่อทดสอบโดยการแข่งขันที่มีความสามารถ"
  tr_enmity_adopt: "วัฒนธรรม $tradition_enmity$"
  tr_enmity_adopt_desc: "£mod_pop_growth_speed£ §Yประชากรเพิ่ม§! ต่อจำนวนคู่แข่งที่เป็นเพื่อนบ้าน: §G+3%§!\n£mod_planet_pop_assembly_mult£ §Yการประกอบประชากรเครื่องจักร§! ต่อจำนวนคู่แข่งที่เป็นเพื่อนบ้าน: §G+3%§!"
- tr_enmity_finish: "$tradition_enmity$ Finished"
+ tr_enmity_finish: "สำเร็จวัฒนธรรม $tradition_enmity$"
  tr_enmity_finish_desc: "ทูตที่มี: §G+1§!\nปลดล็อกท่าทีทางการทูต §Yเป็นปฏิปักษ์§!\n$TRADITIONS_FINISH_AP$"
  tr_enmity_rise_to_the_occasion: "ทำให้ดีขึ้นเพื่อตอบสนองต่อสถานการณ์"
  tr_enmity_rise_to_the_occasion_delayed: "In the face of an ever-increasing number of adversaries, we stand united."
