--- a/mod/thmod/localisation/english/overlord_subjects_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_subjects_l_english.yml
@@ -289,7 +289,7 @@
  preset_subsidiary_benevolent_flavor_desc:0 "$preset_subsidiary_flavor_desc$"
  preset_dominion:0 "อาณานิคม"
  preset_satellite:0 "บริวาร"
- preset_signatory:0 "สนธิสัญญา"
+ preset_signatory:0 "บริวารของจักรวรรดิฟอล์เล็น"
  preset_thrall:0 "ทาส"
  preset_satrapy:0 "เซทระพี/เขตปกครอง"
  preset_relic_satrapy:0 "$preset_satrapy$"
