--- a/mod/thmod/localisation/english/first_contact_l_english.yml
+++ b/mod/thmod/localisation/english/first_contact_l_english.yml
@@ -995,8 +995,8 @@
  leader_trait_fotd_scientist:0 "เจ้าเล่ห์"
  leader_trait_fotd_scientist_desc:0 "This scientist's experience has resulted in valuable insights into cloaking tech."
  leader_trait_fotd_scientist_tooltip:0 "Has increased chance to discover §HCloaking Technologies§! insights related to physics."
- leader_trait_fotd_admiral:0 "เจ้าเล่ห์"
- leader_trait_fotd_admiral_desc:0 "This commander's upbringing taught them to use cloaking in ways our own commanders could never imagine."
+ leader_trait_fotd_commander:0 "เจ้าเล่ห์"
+ leader_trait_fotd_commander_desc:0 "This commander's upbringing taught them to use cloaking in ways our own commanders could never imagine."
  fotd_settled_differences:0 "Settled Differences"
  fotd_settled_differences_desc:0 "Having settled their ideological differences, these people stand as one."
  fotd_alien_shock:0 "Alien Shock"
@@ -1133,8 +1133,8 @@
  wg_fotd_really_bad_contact_desc:0 "First Contact ended in the worst possible way. It is now either us or them."
  war_goal_wg_fotd_really_bad_contact:0 "$wg_fotd_really_bad_contact$"
  war_goal_wg_fotd_really_bad_contact_desc:0 "$wg_fotd_really_bad_contact_desc$"
- requires_recipient_not_fotd_seperatist:0 "§RDue to our agreements we cannot interfere with [from.GetName].§!"
- requires_recipient_not_tech_frozen:0 "§RThis society is unable to progress technologically.§!"
+ requires_recipient_not_fotd_seperatist:0 "$TRIGGER_FAIL$§RDue to our agreements we cannot interfere with [from.GetName].§!"
+ requires_recipient_not_tech_frozen:0 "$TRIGGER_FAIL$§RThis society is unable to progress technologically.§!"
  first_contact.3000.name:0 "The Guest"
  first_contact.3000.desc:0 "The appearance of a building-sized, tentacled monstrosity in the midst of §Y[This.Owner.Capital.GetName]§! has thrown the capital into chaos. The creature seems as confused as we are by its sudden appearance, and has allowed itself to be restrained without resistance.\n\nWhile many [owner.GetScientistPlural] already claim the creature, codenamed §HThe Guest§!, to be of alien nature, others have suggested it could be a previously unknown species which had until now gone undiscovered. After all, no alien ship has been detected in orbit. The creature materialized out of nowhere, seemingly unassisted by technology.\n\nOur confusing (and confused) visitor is currently being held in one of our research facilities."
  first_contact.3000.desc.gestalt:0 "The appearance of a building-sized, tentacled monstrosity in the midst of §Y[This.Owner.Capital.GetName]§! has thrown the capital into disarray. The creature seems as perplexed as we are by its sudden appearance, and has allowed itself to be restrained without resistance.\n\nWe suspect the creature to be of alien nature, but we can't discount the possibility of it being an unknown species native to our world. After all, no alien ship has been detected in orbit. The creature - codenamed §HThe Guest§! - materialized out of nowhere, seemingly unassisted by technology.\n\nOur confusing (and confused) visitor is currently being held in one of our research facilities."
