--- a/mod/thmod/localisation/english/l_english.yml
+++ b/mod/thmod/localisation/english/l_english.yml
@@ -1534,7 +1534,7 @@
  FE_TECH_SPEED:2 "ค่าใช้จ่ายด้านเทคโนโลยีและวัฒนธรรม"
  FE_TECH_SPEED_TOOLTIP:2 "§H$FE_TECH_SPEED$§!\nสิ่งนี้จะควบคุมความเร็วของ ['concept_technologies'] และ ['concept_traditions'] ของจักรวรรดิทั่วไป"
  FE_CRISES:1 "ความแข็งแกร่งของไครซิส"
- FE_CRISES_TOOLTIP:4 "§Kความแข็งแกร่งของไครซิส§!\nสิ่งนี้ควบคุมความแข็งแกร่งของกองยานของ['concept_endgame_crises'] ยิ่งตัวคูณสูงเท่าไร ไครซิสตอนจบเกมก็จะยิ่งอันตรายมากขึ้นเท่านั้น\n\nถ้าหากตั้งค่า §Iประเภทของไครซิส§! เป็น §Iทั้งหมด§!, ค่านี้จะถูกคูณด้วย 1.5 เมื่อไครซิสรอดจากการถูกทำลายในแต่ละครั้ง"
+ FE_CRISES_TOOLTIP:4 "§Kความแข็งแกร่งของไครซิส§!\nสิ่งนี้ควบคุมความแข็งแกร่งของกองยานของ['concept_endgame_crises'] ยิ่งตัวคูณสูงเท่าไร ไครซิสตอนจบเกมก็จะยิ่งอันตรายมากขึ้นเท่านั้น\n\nถ้าหากตั้งค่า §Iประเภทของไครซิส§! เป็น §Iทั้งหมด§!, ค่านี้จะถูกคูณด้วย 2 เมื่อไครซิสรอดจากการถูกทำลายในแต่ละครั้ง"
  FE_PRIMITIVE_WORLDS:1 "อารยธรรมดึกดำบรรพ์ (Pre-FTL) และเผ่าพันธุ์พรี-เซเปียนส์"
  FE_PRIMITIVE_WORLDS_TOOLTIP:2 "§H$FE_PRIMITIVE_WORLDS$§!\nสิ่งนี้ควบคุมความหนาแน่นของ ['concept_preftl_civilizations'] และ ['concept_presapient_species'] ในกาแล็กซี\n\nยิ่งสูงเท่าไร ก็ยิ่งมีโอกาสเกิดในกาแล็กซีมากขึ้นเท่านั้น"
  FE_LOGISTIC_CEILING:0 "เพดานการเพิ่มจำนวนประชากรแบบลอจิสติก"
@@ -2682,6 +2682,8 @@
  GOVERNMENT_CIVICS:0 "พลเมือง"
  POINTS_LEFT_CIVICS:1 "เหลือแต้มพลเมืองที่เลือกได้: $POINTS|H$"
  CIVIC_NOT_MODDABLE:2 "This Civic cannot be manually added or removed after the game has started."
+ CIVIC_NOT_MODDABLE_ONLY_REMOVE: "This Civic cannot be manually removed after the game has started."
+ CIVIC_LOCKED: "§RThis Civic has been locked and can no longer be removed.§!"
  CIVIC_REQUIREMENTS_DESC:0 "Civics that do not fulfill all of their requirements will become inactive and will not provide any of their bonuses."
  SPECIES_CLASS:0 "คลาสเผ่าพันธุ์"
  PORTRAIT:2 "รูปลักษณ์"
@@ -6849,7 +6851,7 @@
  DIPLOMACY_CLOSED_BORDERS:0 "§Tปิดพรมแดนกับ $EMPIRES|H$§!"
  DIPLOMACY_TRUCE:2 "§Tมีการพักรบกับ $EMPIRE|H$ จนถึง $DATE|H$§!"
  DIPLOMACY_UNDER_SOCIETAL_GUIDANCE:0 "§TUnder societal guidance of $EMPIRES|H$§!."
- DIPLOMACY_PROVIDED_WITH_TECHNOLOGIES:0 "§TProvided with thechnologies by $EMPIRES|H$§!."
+ DIPLOMACY_PROVIDED_WITH_TECHNOLOGIES:0 "§TProvided with technologies by $EMPIRES|H$§!."
  DIPLOMACY_PRE_FTL_COMMERCIAL_AGREEMENT:0 "§THas a commercial agreement with $EMPIRES|H$§!."
  DIPLOMACY_ALLIANCE_DESC:0 "§TIn §Hพันธมิตร§!: $NAME|H$§!"
  DIPLOMACY_FEDERATION_DESC:0 "§TIn §Hสหพันธ์§!: $NAME|H$§!"
@@ -12161,7 +12163,7 @@
  ASSIGN_REPRESENTATIVE_DELAYED: "§EAssign a Representative to $FEDERATION$ to increase its §!§HCohesion§!"
  FEDERATION_ASSIGNED_LEADERS: "Representatives assigned: $VALUE|2+=$"
  FEDERATION_COUNTRY_REPRESENTATIVE: "	$COUNTRY$: $EFFECT|Y0$"
- MOD_VERSION:0 "Mod v0.71.3, Update 30/11/2023"
+ MOD_VERSION:0 "Mod v0.71.4, Update 15/12/2023"
  MOD_DEV_MSG:0 "ผู้พัฒนา: §R*ตอนนี้ม็อดยังเป็นเวอร์ชัน Alpha อยู่นะครับ คำศัพท์ยังไม่ค่อยนิ่ง หากมีการเปลี่ยนแปลงคำสำคัญจะแจ้งให้ทราบอีกครั้ง§!\n\n§Bคำที่เปลี่ยนมีดังนี้:\n - Astral Thread -> เส้นใยแอสทรอล / เส้นใยมิติ (ทรัพยากรใหม่)\n - Astral Rift -> รอยแยกมิติ\n - Rift Sphere -> ทรงกลมริฟ\n§!\n\n§Hกรอบการทำงาน เป้าหมาย และ ลำดับความสำคัญ§!\n §E1.DLC ที่รองรับ§! :  Utopia, Synthetic Dawn, Apocalypse, MegaCorp, Federations, Nemesis, Leviathans, Distant Stars, Ancient Relics, Galactic Paragons \n §E2. หลักเกณฑ์การทับศัพท์§! : ราชบัณฑิตยสภา \n §E3. ลำดับความสำคัญในการแปล(เรียงจากมากไปน้อย)§! : (interface/ui) -> (modifier/effect) -> (tutorial) -> (description) -> (event/message)\n\n§Hแหล่งข้อมูลและแรงบันดาลใจ§!\n §E1.หนังสือ:§! เซเปียนส์-ประวัติย่อมนุษยชาติ, โฮโมดีอุส-ประวัติย่อของวันพรุ่งนี้, ยูโทเปีย-มหานครในฝัน, หนึ่ง-เก้า-แปด-สี่ : 1984, หนังสือเรียนวิชาฟิสิกส์, เคมี, ชีว เบื้องต้นสมัยเรียนมหาลัย, วิชาปรัชญาเบื้องต้น, The Matrix and Philosophy: Welcome to the Desert of the Real\n §E2.สารคดี:§! ช่องยูทูป SCIWAYS, GrandMaster TV, คนใฝ่รู้ [Studios], eduHUB, ชีวิตสดใส, คนช่างสงสัย Curiosity Channel, อาจวรงค์ จันทมาศ, Matrix Explained, Kurzgesagt, ZogZag Story, TechOffside, One To Many - A Brief Science\n §E3.บันเทิงคดี:§! The Matrix 1-3 + The Animatrix, Interstellar, 2001: A Space Odyssey, DUNE, Avatar, Star Wars, WALL-E, Star Trek, Inception, Transcendence, Predator, All Tomorrows\n §E4.เอกสาร:§! หลักเกณฑ์การทับศัพท์ภาษาอังกฤษราชบัณฑิตยสภา\n\n§Hเครื่องมือที่ใช้สร้างม็อดมีดังนี้§!\nLocalisation-Manager(Stellaris), Localisation-Editor, MadeeAI Translator"
  MOD_SUPPORTERS:0 "ผู้สนับสนุน: n/a"
  MOD_TEST1DUMMY1:0 "dummy1"
