--- a/mod/thmod/localisation/english/astral_planes_l_english.yml
+++ b/mod/thmod/localisation/english/astral_planes_l_english.yml
@@ -145,7 +145,8 @@
  astral_situation.60.desc: "$astral_rift_discovery_event_text$\n\nA new sentient species has materialized on §Y[rift_temporary_species_planet.GetName]§!, distributed evenly across our existing population.\n\nThe [rift_temporary_species.GetName] have no memory of where they are from and do not appear hostile.\n\nWherever they originated, it is unlikely we can help them return."
  astral_situation.65.name: "$astral_rift_discovery_event_title$"
  astral_situation.65.desc: "$astral_rift_discovery_event_text$\n\nSignificant temporal distortions on §Y[rift_temporary_planet.GetName]§! are causing time to pass twice as quickly. We should monitor the situation closely, and make sure to double their supplies."
- rift_in_space_time_acceleration_modifier: "Time passes twice as quickly on this planet."
+ rift_in_space_time_acceleration_modifier: "Temporal Distortions"
+ rift_in_space_time_acceleration_modifier_desc: "Time passes twice as quickly on this world."
  astral_situation.20.name: "Friction Is the Problem"
  astral_situation.20.desc: "We have discovered that slipping through the folds in space and time requires a perfectly smooth vessel.\n\nWe are certain that we can develop such a device, what we are tentatively calling a "§Y$tech_rift_sphere$§!", should we devote enough research and time. We may then finally discover what is beyond this spatial anomaly."
  astral_planes.2005.name: "$tech_rift_sphere$ Technology Developed"
